// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharPicker render white picker 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="max-width: 500px; display: none;"
    >
      <div class="card"
           style="height: auto;"
      >
        <div class="card__title">
          Character Picker
        </div>
        <div class="card__text">
          <div tabindex="0"
               data-uid="22"
               role="combobox"
               class="input-group input-group--append-icon input-group--text-field input-group--select primary--text"
          >
            <label>
              Select a character...
            </label>
            <div class="input-group__input">
              <div class="input-group__selections"
                   style="overflow: hidden;"
              >
                <input disabled="disabled"
                       tabindex="-1"
                       class="input-group--select__autocomplete"
                       style="display: none;"
                >
              </div>
              <div class="menu"
                   style="display: inline-block;"
              >
                <div class="menu__content menu__content--select"
                     style="max-height: 300px; min-width: 0px; max-width: auto; top: 18px; left: 0px; z-index: 0; display: none;"
                >
                  <div class="card"
                       style="height: auto;"
                  >
                    <div class="list">
                      <div>
                        <a class="list__tile list__tile--link">
                          <div class="avatar"
                               style="height: 48px; width: 48px;"
                          >
                            <img src="/static/assets/potraits/angelia_potrait.png"
                                 alt="Angelia"
                            >
                          </div>
                          Angelia
                        </a>
                      </div>
                      <div>
                        <a class="list__tile list__tile--link">
                          <div class="avatar"
                               style="height: 48px; width: 48px;"
                          >
                            <img src="/static/assets/potraits/aosta_potrait.png"
                                 alt="Aosta"
                            >
                          </div>
                          Aosta
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <i aria-hidden="true"
                 class="icon material-icons input-group__append-icon input-group__icon-cb"
              >
                arrow_drop_down
              </i>
            </div>
            <div class="input-group__details">
            </div>
          </div>
          <div class="input-group input-group--dirty input-group--text-field primary--text">
            <label>
              Level
            </label>
            <div class="input-group__input">
              <input tabindex="0"
                     aria-label="Level"
                     type="text"
              >
            </div>
            <div class="input-group__details">
            </div>
          </div>
        </div>
        <div class="card__actions">
          <button type="button"
                  class="btn btn--flat primary--text"
          >
            <div class="btn__content">
              OK
            </div>
          </button>
          <button type="button"
                  class="btn btn--flat"
          >
            <div class="btn__content">
              CANCEL
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`CharPicker rendered empty picker 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="max-width: 500px; display: none;"
    >
      <div class="card"
           style="height: auto;"
      >
        <div class="card__title">
          Character Picker
        </div>
        <div class="card__text">
          <div tabindex="0"
               data-uid="6"
               role="combobox"
               class="input-group input-group--append-icon input-group--text-field input-group--select primary--text"
          >
            <label>
              Select a character...
            </label>
            <div class="input-group__input">
              <div class="input-group__selections"
                   style="overflow: hidden;"
              >
                <input disabled="disabled"
                       tabindex="-1"
                       class="input-group--select__autocomplete"
                       style="display: none;"
                >
              </div>
              <div class="menu"
                   style="display: inline-block;"
              >
                <div class="menu__content menu__content--select"
                     style="max-height: 300px; min-width: 0px; max-width: auto; top: 18px; left: 0px; z-index: 0; display: none;"
                >
                  <div class="card"
                       style="height: auto;"
                  >
                    <div class="list">
                      <div disabled="disabled"
                           class="text--disabled"
                      >
                        <a disabled="disabled"
                           class="list__tile list__tile--link list__tile--disabled"
                        >
                          <div class="avatar"
                               style="height: 48px; width: 48px;"
                          >
                            <img>
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <i aria-hidden="true"
                 class="icon material-icons input-group__append-icon input-group__icon-cb"
              >
                arrow_drop_down
              </i>
            </div>
            <div class="input-group__details">
            </div>
          </div>
          <div class="input-group input-group--dirty input-group--text-field primary--text">
            <label>
              Level
            </label>
            <div class="input-group__input">
              <input tabindex="0"
                     aria-label="Level"
                     type="text"
              >
            </div>
            <div class="input-group__details">
            </div>
          </div>
        </div>
        <div class="card__actions">
          <button type="button"
                  class="btn btn--flat primary--text"
          >
            <div class="btn__content">
              OK
            </div>
          </button>
          <button type="button"
                  class="btn btn--flat"
          >
            <div class="btn__content">
              CANCEL
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>

`;
